@@ -1,5 +1,11 @@
 New entries should be added at the top
 
+2005-02-24 colors.py change ColorConverter.to_rgb() so it always returns rgb 
+           (and not rgba), allow cnames keys to be cached, change the exception
+           raised from RuntimeError to ValueError (like hex2color())
+	   hex2color() use a regular expression to check the color string is
+           valid  - SC
+
 2005-02-23 Added rc param ps.useafm so backend ps can use native afm
            fonts or truetype.  afme breaks mathtext but causes much
            smaller font sizes and may result in images that display
